--- a/src/AvenueClothing.Feature.Transaction.Module/AvenueClothing.Feature.Transaction.Module.csproj
+++ b/src/AvenueClothing.Feature.Transaction.Module/AvenueClothing.Feature.Transaction.Module.csproj
@@ -125,8 +125,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AddToBasketController.cs" />
+    <Compile Include="Controllers\AddressController.cs" />
     <Compile Include="Controllers\MiniBasketController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\AddressDetailsViewModel.cs" />
+    <Compile Include="ViewModels\AddressViewModel.cs" />
     <Compile Include="ViewModels\AddToBasketIndexViewModel.cs" />
     <Compile Include="ViewModels\RefreshMiniBasketViewModel.cs" />
     <Compile Include="ViewModels\MiniBasketViewModel.cs" />
@@ -138,6 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <Content Include="Scripts\js-addresses.js" />
     <Content Include="Scripts\js-mini-basket.js" />
     <Content Include="Scripts\js-add-to-basket-button.js" />
   </ItemGroup>
@@ -151,7 +155,7 @@
     <Content Include="Views\ContinueToCheckout\ContinueToCheckout.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Address\Address.cshtml" />
+    <None Include="Views\Address\Addresses.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
