Renamed MiniBasket Controller missing Sitecore unicorn sync

--- a/src/AvenueClothing.Feature.Transaction.Module/AvenueClothing.Feature.Transaction.Module.csproj
+++ b/src/AvenueClothing.Feature.Transaction.Module/AvenueClothing.Feature.Transaction.Module.csproj
@@ -145,7 +145,7 @@
     <Content Include="Views\AddToBasket\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\MiniBasket\MiniBasket.cshtml" />
+    <Content Include="Views\MiniBasket\Rendering.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\ContinueToCheckout\ContinueToCheckout.cshtml" />
