--- a/src/AvenueClothing.Feature.General.Module/AvenueClothing.Feature.General.Module.csproj
+++ b/src/AvenueClothing.Feature.General.Module/AvenueClothing.Feature.General.Module.csproj
@@ -133,7 +133,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Views\Breadcrumb.cshtml" />
+    <Content Include="Views\Breadcrumb\Rendering.cshtml" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
