--- a/src/project/AvenueClothing/serialization/Renderings/Renderings/Commerce/Catalog/Product Card.yml
+++ b/src/project/AvenueClothing/serialization/Renderings/Renderings/Commerce/Catalog/Product Card.yml
@@ -7,7 +7,7 @@ DB: master
 SharedFields:
 - ID: "ded9e431-3604-4921-a4b3-a6ec7636a5b6"
   Hint: Controller Action
-  Value: ProductCard
+  Value: Rendering
 - ID: "e144d9d4-b135-42d4-a5a0-53c09704671c"
   Hint: Parameters
   Value: Product
