--- a/src/project/AvenueClothing/serialization/Renderings/Renderings/Commerce/Catalog/Variant Picker.yml
+++ b/src/project/AvenueClothing/serialization/Renderings/Renderings/Commerce/Catalog/Variant Picker.yml
@@ -11,7 +11,7 @@ SharedFields:
   Value: 0
 - ID: "ded9e431-3604-4921-a4b3-a6ec7636a5b6"
   Hint: Controller Action
-  Value: Index
+  Value: Rendering
 - ID: "e64ad073-dfcc-4d20-8c0b-fe5aa6226cd7"
   Hint: Controller
   Value: VariantPicker
