--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Product Details.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Product Details.yml
@@ -4,6 +4,23 @@ Parent: "7919567a-faa2-4504-9c31-63a2cf67b551"
 Template: "86fa3a87-b0a3-4a4b-bbe1-e75398d267d5"
 Path: /sitecore/content/AvenueClothing/Product Details
 DB: master
+SharedFields:
+- ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
+  Hint: __Renderings
+  Type: layout
+  Value: |
+    <r xmlns:p="p" xmlns:s="s"
+      p:p="1">
+      <d
+        id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}">
+        <r
+          uid="{B60AD869-E1D5-4FBB-BBBD-D32F9323756B}"
+          s:ds=""
+          s:id="{EBBE7524-3356-47AC-852A-8EE1DD93CAD6}"
+          s:par=""
+          s:ph="header" />
+      </d>
+    </r>
 Languages:
 - Language: en
   Versions:
