--- a/src/publishsettings.targets
+++ b/src/publishsettings.targets
@@ -1,5 +1,5 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <publishUrl>http://sc8</publishUrl>
+    <publishUrl>http://sc8dev</publishUrl>
   </PropertyGroup>
 </Project>
