New payment picker module.

--- a/src/AvenueClothing.Feature.Transaction.Module/AvenueClothing.Feature.Transaction.Module.csproj
+++ b/src/AvenueClothing.Feature.Transaction.Module/AvenueClothing.Feature.Transaction.Module.csproj
@@ -124,6 +124,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\PaymentPickerController.cs" />
     <Compile Include="Controllers\AddToBasketButtonController.cs" />
     <Compile Include="Controllers\AddressController.cs" />
     <Compile Include="Controllers\MiniBasketController.cs" />
@@ -134,6 +135,7 @@
     <Compile Include="ViewModels\MiniBasketRefreshViewModel.cs" />
     <Compile Include="ViewModels\MiniBasketRenderingViewModel.cs" />
     <Compile Include="ViewModels\AddToBasketButtonAddToBasketViewModel.cs" />
+    <Compile Include="ViewModels\PaymentPickerViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Extensions\" />
@@ -155,6 +157,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Address\Rendering.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\PaymentPicker\Rendering.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
