new basket preview being used on the preview page.

--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Preview.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Preview.yml
@@ -12,7 +12,24 @@ SharedFields:
     <r xmlns:xsd="http://www.w3.org/2001/XMLSchema">
       <d
         id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}"
-        l="{55AD3180-3D79-461F-AC6F-D679AB58A849}" />
+        l="{55AD3180-3D79-461F-AC6F-D679AB58A849}">
+        <r
+          id="{878E2B49-315C-4EFE-8D26-52605F78C3D6}"
+          ph="header"
+          uid="{031D6E95-9B4F-40FA-86D3-E96AC28D337A}" />
+        <r
+          id="{EBBE7524-3356-47AC-852A-8EE1DD93CAD6}"
+          ph="header content"
+          uid="{DE147494-E9D2-4C7E-9633-08105D027EDF}" />
+        <r
+          id="{749D4A8D-990A-4FFE-BE3A-C74591EBD862}"
+          ph="sidebar"
+          uid="{9F71F427-F6A4-447E-AA67-466576246C12}" />
+        <r
+          id="{A56E9C47-09B5-443D-BA4F-26CC617E50AB}"
+          ph="main"
+          uid="{14A4BF28-E51A-40AA-9730-F4DD4A1628F9}" />
+      </d>
     </r>
 Languages:
 - Language: en
