--- a/src/AvenueClothing.Feature.Transaction.Module/AvenueClothing.Feature.Transaction.Module.csproj
+++ b/src/AvenueClothing.Feature.Transaction.Module/AvenueClothing.Feature.Transaction.Module.csproj
@@ -125,6 +125,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\BasketPreviewController.cs" />
     <Compile Include="Controllers\ShippingPickerController.cs" />
     <Compile Include="Controllers\PaymentPickerController.cs" />
     <Compile Include="Controllers\AddToBasketButtonController.cs" />
@@ -135,11 +136,13 @@
     <Compile Include="ViewModels\AddressSaveViewModel.cs" />
     <Compile Include="ViewModels\AddressRenderingViewModel.cs" />
     <Compile Include="ViewModels\AddToBasketButtonRenderingViewModel.cs" />
+    <Compile Include="ViewModels\BasketPreviewViewModel.cs" />
     <Compile Include="ViewModels\CreatePaymentViewModel.cs" />
     <Compile Include="ViewModels\CreateShipmentViewModel.cs" />
     <Compile Include="ViewModels\MiniBasketRefreshViewModel.cs" />
     <Compile Include="ViewModels\MiniBasketRenderingViewModel.cs" />
     <Compile Include="ViewModels\AddToBasketButtonAddToBasketViewModel.cs" />
+    <Compile Include="ViewModels\OrderLinePreviewViewModel.cs" />
     <Compile Include="ViewModels\PaymentPickerViewModel.cs" />
     <Compile Include="ViewModels\ShippingPickerViewModel.cs" />
   </ItemGroup>
@@ -174,6 +177,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Voucher\Rendering.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\BasketPreview\Rendering.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
