Async price calculation on variant change (if there are variant-specific prices)

--- a/src/AvenueClothing.Feature.Catalog.Module/AvenueClothing.Feature.Catalog.Module.csproj
+++ b/src/AvenueClothing.Feature.Catalog.Module/AvenueClothing.Feature.Catalog.Module.csproj
@@ -150,6 +150,7 @@
     <Compile Include="ViewModels\ReviewListRenderingViewModel.cs" />
     <Compile Include="ViewModels\VariantPickerVariantExistsViewModel.cs" />
     <Compile Include="ViewModels\VariantPickerRenderingViewModel.cs" />
+    <Compile Include="ViewModels\VariantPriceCalculationDetails.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
