working cart (initial version)

--- a/src/AvenueClothing.Feature.Transaction.Module/AvenueClothing.Feature.Transaction.Module.csproj
+++ b/src/AvenueClothing.Feature.Transaction.Module/AvenueClothing.Feature.Transaction.Module.csproj
@@ -167,7 +167,7 @@
     <Content Include="Views\MiniBasket\Rendering.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Basket\Basket.cshtml" />
+    <Content Include="Views\Basket\Rendering.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\ContinueToCheckout\ContinueToCheckout.cshtml" />
