--- a/src/AvenueClothing.Feature.Transaction.Module/AvenueClothing.Feature.Transaction.Module.csproj
+++ b/src/AvenueClothing.Feature.Transaction.Module/AvenueClothing.Feature.Transaction.Module.csproj
@@ -151,7 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
-    <Content Include="Scripts\js-addresses.js" />
+    <Content Include="Scripts\js-address.js" />
     <Content Include="Scripts\js-mini-basket.js" />
     <Content Include="Scripts\js-add-to-basket-button.js" />
   </ItemGroup>
