Back buttons in checkout flow

--- a/src/scripts/Serialization/App_Config/Include/z.AvenueClothing.DevSettings.config
+++ b/src/scripts/Serialization/App_Config/Include/z.AvenueClothing.DevSettings.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
 	<sitecore>
-		<sc.variable name="sourceFolder" value="D:\Dev\Sitecore Accelerator\src" />
+		<sc.variable name="sourceFolder" value="C:\Programming\Sitecore Demo Store Repo\src" />
 		<sc.variable name="rootHostName" value="" />
 	</sitecore>
 </configuration>
