--- a/src/AvenueClothing.Feature.General.Module/AvenueClothing.Feature.General.Module.csproj
+++ b/src/AvenueClothing.Feature.General.Module/AvenueClothing.Feature.General.Module.csproj
@@ -163,6 +163,7 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
