--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing.yml
@@ -18,6 +18,12 @@ SharedFields:
           ph="header"
           uid="{4C175686-6D09-43F6-9D02-D8608A09469A}" />
         <r
+          ds=""
+          id="{E5C76A34-378F-4808-957B-2C055AE08BCB}"
+          par=""
+          ph="header content"
+          uid="{3E7F1B51-F330-4A6A-A54B-D7A56A0A20B7}" />
+        <r
           id="{EBBE7524-3356-47AC-852A-8EE1DD93CAD6}"
           ph="header content"
           uid="{181FAF15-0FD0-418F-BD42-C0DDC263F082}" />
@@ -55,9 +61,12 @@ Languages:
           <d
             id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}">
             <r
-              uid="{8023DBAC-7935-41FB-92AB-F64659757E9C}">
+              uid="{0CB4F936-D411-4D6C-B048-181E9B8313A1}">
               <p:d />
             </r>
+            <r
+              uid="{181FAF15-0FD0-418F-BD42-C0DDC263F082}"
+              p:before="r[@uid='{488D87DD-F566-4C06-AF19-0A052F93340F}']" />
             <r
               uid="{14E0474C-A7D6-4E58-BA5E-F16667157526}"
               p:before="*[1=2]" />
@@ -76,9 +85,9 @@ Languages:
       Hint: Products
       Type: Treelist
       Value: |
-        {ABBE3727-985B-48A3-9E29-59702C996770}
-        {7F88AB41-A13D-48CC-9AD9-953B5B52B314}
-        {B9686F00-1E5A-4565-8C32-F9C858C5835C}
+        {0A2D1B36-5A98-4907-8130-9DDC0C5F762F}
+        {2B707FC6-C7EB-4F5D-A75C-550EC0492834}
+        {0AA9AB53-95E3-4991-86E9-96C2F17B5AAF}
     - ID: "b9baaa2b-d947-4cae-97cf-4e413b57c511"
       Hint: Images
       Type: Multilist
