--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Cart.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Cart.yml
@@ -29,6 +29,10 @@ SharedFields:
           id="{33DD6E2C-D788-4F6B-BCD8-6DBFA912C99E}"
           ph="main"
           uid="{E6CD0C68-FA5D-4C0D-A330-44BDB7B4B828}" />
+        <r
+          id="{E5C76A34-378F-4808-957B-2C055AE08BCB}"
+          ph="header content"
+          uid="{D3FED12B-90BD-4190-A9B2-C4625036B60B}" />
       </d>
     </r>
 Languages:
