--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Search.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Search.yml
@@ -21,6 +21,18 @@ SharedFields:
           id="{878E2B49-315C-4EFE-8D26-52605F78C3D6}"
           ph="header"
           uid="{0DB705AD-DD13-4A78-B745-9A161BD8C6D6}" />
+        <r
+          id="{702720CF-81EB-4B67-AA31-400DDD891E50}"
+          ph="main"
+          uid="{BCF98B05-C114-46E1-AC3D-FBC59D4215B9}" />
+        <r
+          id="{749D4A8D-990A-4FFE-BE3A-C74591EBD862}"
+          ph="sidebar"
+          uid="{06F73EDF-1AAD-4106-86D4-0BF65EF75A6B}" />
+        <r
+          id="{E5C76A34-378F-4808-957B-2C055AE08BCB}"
+          ph="header content"
+          uid="{3EDB6B6C-1396-4896-8D24-50741595FD7C}" />
       </d>
     </r>
 Languages:
