--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Cart.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Cart.yml
@@ -29,6 +29,10 @@ SharedFields:
           id="{33DD6E2C-D788-4F6B-BCD8-6DBFA912C99E}"
           ph="main"
           uid="{E6CD0C68-FA5D-4C0D-A330-44BDB7B4B828}" />
+        <r
+          id="{765AF52A-4993-4738-98D3-AD75AD89FCC2}"
+          ph="main"
+          uid="{43B307A1-7EB7-4BBA-AB74-87A6A3C2F7AC}" />
       </d>
     </r>
 Languages:
