--- a/src/AvenueClothing.Feature.Transaction.Module/AvenueClothing.Feature.Transaction.Module.csproj
+++ b/src/AvenueClothing.Feature.Transaction.Module/AvenueClothing.Feature.Transaction.Module.csproj
@@ -135,6 +135,8 @@
     <Compile Include="Controllers\MiniBasketController.cs" />
     <Compile Include="Controllers\VoucherController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IMiniBasketService.cs" />
+    <Compile Include="Services\Impl\MiniBasketService.cs" />
     <Compile Include="ViewModels\AddressSaveViewModel.cs" />
     <Compile Include="ViewModels\OrderlineViewModel.cs" />
     <Compile Include="ViewModels\PurchaseOrderViewModel.cs" />
